# aplwrap

./: .gitignore  APLPLOT.md  APL_STATUS_LINE.md  COMPLETION.md  ChangeLog  EDITOR.md  INSTALL  KEY_BINDINGS.md  Makefile.am  Makefile.in  README  README.md  Summary-2-2.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
images/: layout.xcf
src/: .gitignore  Avec.h  ChangeLog  Makefile.am  Makefile.in  TODO  apl.c  apl.h  aplio.c  aplio.h  aplwrap.c  aplwrap.h  buildinfo  complete.c  complete.h  edit.c  edit.h  help.c  help.h  history.c  history.h  keymap.h  layout.h  menu.c  menu.h  options.c  options.h  pstat.c  pstat.h  resources.c  resources.h  search.c  search.h  txtbuf.c  txtbuf.h
